object: Make define_static_methods infallible

Previously, gjs_object_define_static_methods() always returned true even
if an exception was thrown, causing the exception to be swallowed. Since
it never returned anything but true, we get rid of the return type.
Exceptions thrown by fallible functions called within
gjs_object_define_static_methods() are logged immediately and cleared.

(Allowing the exceptions to propagate and be caught would potentially
result in a GI namespace with only half its methods defined, and that
seems undesirable.)

https://bugzilla.gnome.org/show_bug.cgi?id=737607